# gsni

./: .gitignore  AUTHORS  CONTRIBUTING.md  LICENSE  NEWS  README.md  gsni-version.h.in  meson.build  meson_options.txt  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
bindings/python/: MANIFEST.in  README.md  meson.build  pyproject.toml
bindings/python/examples/: custom_icon.py  menu_item.py  music_controller.py  simple_tray.py  tray_host.py
bindings/python/gsni/: __init__.py
bindings/python/gsni.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bindings/python/tests/: test_gsni.py
docs/: README.md  getting-started.md  gsni.toml.in  meson.build  python.md
examples/: custom-icon.c  menu-item.c  meson.build  music-controller.c  simple-item.c  tray-host.c
gsni/: gsni-enums.h  gsni-host-item.h  gsni-host.h  gsni-item.h  gsni-pixbuf.h  gsni-types.h  gsni-visibility.h  gsni.h
packaging/: libgsni.spec
packaging/debian/: control  gir1.2-gsni-1.0.install  libgsni-dev.install  libgsni1.install  python3-gsni.install  rules
src/: gsni-dbusmenu.c  gsni-dbusmenu.h  gsni-enums.c  gsni-host-item.c  gsni-host.c  gsni-item-dbus.c  gsni-item-dbus.h  gsni-item.c  gsni-pixbuf.c  gsni-types.c  gsni-watcher.c  gsni-watcher.h  meson.build
tests/: meson.build  test-conformance.c  test-item.c  test-pixbuf.c  test-watcher.c
