[build-system]
requires = ["meson-python>=0.15", "meson>=1.0"]
build-backend = "mesonpy"

[project]
name = "gsni"
version = "1.0.0"
description = "StatusNotifierItem D-Bus system tray icons for GTK4"
readme = "README.md"
license = { text = "LGPL-2.1-or-later" }
authors = [{ name = "Jaroslav Reznik", email = "jreznik@redhat.com" }]
urls = { repository = "https://github.com/jreznik/gsni" }
requires-python = ">=3.9"
dependencies = ["pygobject"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment",
]

[tool.meson-python.args]
setup = ["-Dtests=false", "-Dexamples=false", "-Ddocs=false"]
