[build-system]
requires = ["meson-python>=0.13", "meson>=1.0"]
build-backend = "mesonpy"

[project]
name = "gsni"
version = "1.0.1"
description = "StatusNotifierItem D-Bus system tray icons for GTK4"
readme = "README.md"
license = "LGPL-2.1-or-later"
authors = [{ name = "Jaroslav Reznik", email = "jreznik@redhat.com" }]
requires-python = ">=3.9"
dependencies = ["pygobject"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Desktop Environment",
]

[project.urls]
repository = "https://github.com/jreznik/gsni"
issues     = "https://github.com/jreznik/gsni/issues"

[tool.meson-python.args]
setup = ["-Dtests=false", "-Dexamples=false", "-Ddocs=false"]
