[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gsni"
version = "1.0.1"
description = "StatusNotifierItem D-Bus system tray icons for GTK4 — Python bindings"
readme = "README.md"
license = "LGPL-2.1-or-later"
authors = [{ name = "Jaroslav Reznik", email = "jreznik@redhat.com" }]
requires-python = ">=3.9"
dependencies = ["pygobject"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Desktop Environment",
]

[project.urls]
repository = "https://github.com/jreznik/gsni"
issues     = "https://github.com/jreznik/gsni/issues"

[tool.setuptools]
packages = ["gsni"]

[tool.setuptools.package-dir]
"gsni" = "gsni"
